oprava a předělání na dynamické iframe na stránce Uses

--- a/uses/index.html
+++ b/uses/index.html
@@ -29,27 +29,36 @@
         <section>
             <article class="black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Poker</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit quasi modi explicabo ipsam, iusto autem beatae inventore quae dignissimos praesentium saepe porro a! Minima molestias debitis consequuntur amet ex.
-                </p>
-                <h3>Rules explained</h3>
-                <iframe class="round-corners" width="560" height="315" src="https://www.youtube-nocookie.com/embed/CpSewSHZhmo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="article-content">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit quasi modi explicabo ipsam, iusto autem beatae inventore quae dignissimos praesentium saepe porro a! Minima molestias debitis consequuntur amet ex.
+                    </p>
+                    <div>
+                        <iframe class="round-corners" src="https://www.youtube-nocookie.com/embed/CpSewSHZhmo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
             </article>
             <article class="black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Cardistry</h2>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt consequatur veniam nulla, quas ducimus hic, vero fugit neque porro natus laborum perspiciatis. Architecto eius repudiandae facilis, quasi aspernatur veritatis earum reiciendis alias iste maiores, ea sapiente tempora quae quod pariatur? Itaque, delectus laborum. Ullam adipisci rerum dolore numquam repellendus aspernatur.
-                </p>
-                <h3>Performance</h3>
-                <iframe class="round-corners" width="560" height="315" src="https://www.youtube-nocookie.com/embed/S7kG641iA_g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="article-content">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt consequatur veniam nulla, quas ducimus hic, vero fugit neque porro natus laborum perspiciatis. Architecto eius repudiandae facilis, quasi aspernatur veritatis earum reiciendis alias iste maiores, ea sapiente tempora quae quod pariatur? Itaque, delectus laborum. Ullam adipisci rerum dolore numquam repellendus aspernatur.
+                    </p>
+                    <div>
+                        <iframe class="round-corners" src="https://www.youtube-nocookie.com/embed/S7kG641iA_g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
             </article>
             <article class="black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Magic</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo officiis laboriosam quaerat delectus aliquam excepturi nam ipsa voluptates in repellat assumenda odio ab distinctio, beatae dolores. Exercitationem sequi excepturi beatae error numquam blanditiis nemo magni, adipisci iure amet delectus explicabo molestias ea cupiditate nesciunt. Error maxime repellat tempora dicta aliquam?
-                </p>
-                <h3>Performance</h3>
-                <iframe class="round-corners" width="560" height="315" src="https://www.youtube-nocookie.com/embed/pYw4ibT_xrk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="article-content">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo officiis laboriosam quaerat delectus aliquam excepturi nam ipsa voluptates in repellat assumenda odio ab distinctio, beatae dolores. Exercitationem sequi excepturi beatae error numquam blanditiis nemo magni, adipisci iure amet delectus explicabo molestias ea cupiditate nesciunt. Error maxime repellat tempora dicta aliquam?
+                    </p>
+                    <div>
+                        <iframe class="round-corners" src="https://www.youtube-nocookie.com/embed/pYw4ibT_xrk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
             </article>
         </section>
         <footer>
