úprava footeru a přidání tlačítka Back to top na všechny stránky

--- a/manufacturers/index.html
+++ b/manufacturers/index.html
@@ -69,6 +69,7 @@
             </section>
         </div>
         <footer>
+            <a class="btn btn-back-to-top" href="#">Back to top &#8593</a>
             <p>Copyright &#169; 2022 Dominik Fuka</p>
         </footer>
     </body>
