úvodní odstavec a id článků s designéry

--- a/designers/index.html
+++ b/designers/index.html
@@ -26,8 +26,23 @@
                 </nav>
             </div>
         </header>
-        <div class="designers-content-wrapper">
-            <section class="designer-container black-semitransparent-bg round-corners">
+        <section>
+            <article class="black-semitransparent-bg round-corners">
+                <h2 class="article-heading">Many fish in the sea...</h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim autem eaque repellat, nostrum impedit, natus rerum quibusdam doloribus voluptas ad ab inventore delectus tempora saepe. Sequi temporibus voluptatem veritatis quos eius! Nam, soluta dignissimos consequatur sapiente in, cumque, praesentium aliquid voluptas ex ipsum quia est quis? Eveniet accusamus et debitis, eaque labore illum, recusandae voluptatem unde nam dolor aut? Laborum quas natus fugiat tenetur voluptatibus?
+                </p>
+                <div id="select-designer" class="designer-selection">
+                    <a class="btn btn-nav" href="#luke-wadey">Luke Wadey</a>
+                    <a class="btn btn-nav" href="#stockholm17">Stockholm17</a>
+                    <a class="btn btn-nav" href="#missing-new-york">Missing New York</a>
+                    <a class="btn btn-nav" href="#joker-and-the-thief">Joker &#38 the Thief</a>
+                    <a class="btn btn-nav" href="#daniel-schneider">Daniel Schneider</a>
+                </div>
+            </article>
+        </section>
+        <section class="designers-content-wrapper">
+            <article id="luke-wadey" class="designer-container black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Luke Wadey</h2>
                 <div class="designer-profile">
                     <figure>
@@ -62,8 +77,8 @@
                         <img src="../assets/img/arwv2-cards.png" alt="ARW V2 poker card design by Luke Wadey">
                     </figure>
                 </div>
-            </section>
-            <section class="designer-container black-semitransparent-bg round-corners">
+            </article>
+            <article id="stockholm17" class="designer-container black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Stockholm17</h2>
                 <div class="designer-profile">
                     <figure>
@@ -98,8 +113,8 @@
                         <img src="../assets/img/notoriousgamblingfrog-cards.png" alt="Notorious Gambling Frog poker card design by Stockholm17">
                     </figure>
                 </div>
-            </section>
-            <section class="designer-container black-semitransparent-bg round-corners">
+            </article>
+            <article id="missing-new-york" class="designer-container black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Missing New York</h2>
                 <div class="designer-profile">
                     <figure>
@@ -134,8 +149,8 @@
                         <img src="../assets/img/pigment-cards.png" alt="Pigment poker card design by Missing New York">
                     </figure>
                 </div>
-            </section>
-            <section class="designer-container black-semitransparent-bg round-corners">
+            </article>
+            <article id="joker-and-the-thief" class="designer-container black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Joker &#38; the Thief</h2>
                 <div class="designer-profile">
                     <figure>
@@ -170,8 +185,8 @@
                         <img src="../assets/img/fiveninetyseven-cards.png" alt="597 poker card design by Joker and the Thief">
                     </figure>
                 </div>
-            </section>
-            <section class="designer-container black-semitransparent-bg round-corners">
+            </article>
+            <article id="daniel-schneider" class="designer-container black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Daniel Schneider</h2>
                 <div class="designer-profile">
                     <figure>
@@ -206,8 +221,8 @@
                         <img src="../assets/img/innocence-cards.png" alt="Innocence poker card design by Daniel Schneider">
                     </figure>
                 </div>
-            </section>
-        </div>
+            </article>
+        </section>
         <footer>
             <a class="btn btn-back-to-top" href="#">Back to top &#8593</a>
             <p>Copyright &#169; 2022 Dominik Fuka</p>
