tlačítka na návrat k výběru designéra

--- a/designers/index.html
+++ b/designers/index.html
@@ -77,6 +77,9 @@
                         <img src="../assets/img/arwv2-cards.png" alt="ARW V2 poker card design by Luke Wadey">
                     </figure>
                 </div>
+                <div class="designer-navigation">
+                    <a class="btn btn-back-to-selection" href="#select-designer">Back to selection</a>
+                </div>
             </article>
             <article id="stockholm17" class="designer-container black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Stockholm17</h2>
@@ -112,6 +115,9 @@
                     <figure>
                         <img src="../assets/img/notoriousgamblingfrog-cards.png" alt="Notorious Gambling Frog poker card design by Stockholm17">
                     </figure>
+                </div>
+                <div class="designer-navigation">
+                    <a class="btn btn-back-to-selection" href="#select-designer">Back to selection</a>
                 </div>
             </article>
             <article id="missing-new-york" class="designer-container black-semitransparent-bg round-corners">
@@ -149,6 +155,9 @@
                         <img src="../assets/img/pigment-cards.png" alt="Pigment poker card design by Missing New York">
                     </figure>
                 </div>
+                <div class="designer-navigation">
+                    <a class="btn btn-back-to-selection" href="#select-designer">Back to selection</a>
+                </div>
             </article>
             <article id="joker-and-the-thief" class="designer-container black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Joker &#38; the Thief</h2>
@@ -185,6 +194,9 @@
                         <img src="../assets/img/fiveninetyseven-cards.png" alt="597 poker card design by Joker and the Thief">
                     </figure>
                 </div>
+                <div class="designer-navigation">
+                    <a class="btn btn-back-to-selection" href="#select-designer">Back to selection</a>
+                </div>
             </article>
             <article id="daniel-schneider" class="designer-container black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Daniel Schneider</h2>
@@ -220,6 +232,9 @@
                     <figure>
                         <img src="../assets/img/innocence-cards.png" alt="Innocence poker card design by Daniel Schneider">
                     </figure>
+                </div>
+                <div class="designer-navigation">
+                    <a class="btn btn-back-to-selection" href="#select-designer">Back to selection</a>
                 </div>
             </article>
         </section>
