--- a/collecting/index.html
+++ b/collecting/index.html
@@ -30,9 +30,8 @@
             <section class="intro pad-20 round-corners">
                 <div class="black-semitransparent-bg round-corners">
                     <h2 class="article-heading">Want to start your collection?</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus vel, recusandae ea dignissimos ipsum animi repudiandae accusantium consequatur labore. Aut perferendis rem hic! Commodi tenetur odio porro! Ut magnam architecto at aperiam vel consequuntur iste. In animi, veritatis expedita, quia non ad ipsum fugiat soluta excepturi cumque qui id voluptate facilis possimus dolor nostrum optio omnis itaque repudiandae perferendis doloribus enim eaque nam molestias! Sit in voluptatibus deserunt non dicta.
-                    </p>
+                    <p>If you want to start collecting playing cards, I have a friendly warning for you. It may get addictive once you fully get into it. There are a lot of way to collect playing cards. You can start with a single brand or just a single series by one of the brands out there. You can also collect cards with a certain color since many designs feature just that and the white of the paper to make the design pop. Possibilities are endless and the decision is completely up to you.</p>
+                    <p>There are two major communities or places where you can talk about playing cards and search for the next one to get to your collection. I excluded eBay just because it is only used to selling and there is no community aspect to it. However you will most definitely encounter it unless you directly buy the deck from someone based on agreement.</p>
                 </div>
                 <div class="community-section">
                     <article class="black-semitransparent-bg round-corners">
@@ -41,7 +40,9 @@
                             <div class="logo-crop">
                                 <img class="logo" src="../assets/img/ig_logo.png" alt="Instagram logo">
                             </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis, ducimus, natus laudantium at cum maxime odit quidem unde, veniam molestias tenetur labore architecto alias maiores aliquid molestiae eaque porro praesentium dolore asperiores cumque nostrum? Exercitationem eius explicabo est vitae natus eveniet. Ad culpa labore eaque soluta sapiente eligendi cum dignissimos.</p>
+                            <p>Instagram became a harbour of playing card content over the years. You can find basically all enthusiasts there no matter the favourite activity - collecting, magic, cardistry, art made of playing cards... You name it. We are here to talk about collecting though. Many collectors share pictures of their precious collections, ways to display them, and their most priced white whale decks (basically decks that are insanely rare and/or expensive beyond belief for a single stack of hard paper in a paper box).</p>
+                            <p>One thing about Instagram is that it is focused on a individual, after all it is a content sharing platform. That makes is kind of weird since you have to reach out to other people via direct messages. Fear not however, as scary as it may sound, majority of the people in the community is very friendly and happy to chat. They might also point you in direction of what you are looking for.</p>
+                            <p>Great place to start exploring Instagram's playing card community is via hashtags. You can click the button below, which will take you to one of the most popular hashtags in the community.</p>
                         </div>
                         <a class="btn btn-centered" ref="https://www.instagram.com/explore/tags/playingcards/">Explore #playingcards &#8594;</a>
                     </article>
@@ -51,9 +52,9 @@
                             <div class="logo-crop">
                                 <img class="logo" src="https://scontent-prg1-1.xx.fbcdn.net/v/t1.18169-9/10441243_1524966054390342_8710750428767427879_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=86_Q4_PYgSEAX8YQ6yN&_nc_ht=scontent-prg1-1.xx&oh=00_AfBNeCbwQo7hiUnkWJ-HzV3kDV-efbfRErjlDS6vk3DgvA&oe=638DA91C" alt="United Cardists Forum logo">
                             </div>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corrupti consequuntur ullam, dolorum minima sint alias voluptatem aliquid obcaecati doloribus amet totam vitae tempore unde a facere dignissimos corporis voluptatibus, deleniti cumque laudantium. Repudiandae, totam, possimus provident ratione consectetur asperiores, quidem exercitationem dignissimos error laboriosam assumenda eius quas voluptas itaque. Fugiat nulla quisquam debitis commodi temporibus inventore nesciunt quod unde reiciendis obcaecati delectus, fugit repellendus voluptas at beatae quas placeat facere tempore ducimus, autem adipisci numquam illum, magni incidunt. Odit.
-                            </p>
+                            <p>The United Cardists forum is the opposite of Instagram. The great advantage of forum threads is that you can join a conversation at any time and read what has been said so far. You can also start a new conversation thread or look around if there is a thread that already answers your question. The feeling of community is far stronger than on Instagram.</p>
+                            <p>You need an account to contribute to threads and create new ones, however if you want to just browse and read, you don't need one.</p>
+                            <p>The forum features many topics including reviews of playing cards, new upcoming decks and also threads, where companies can post news regarding their work so people have official source. Other than that you can also get help and input if you are working on a design for a deck of your own. The forum also has its own marketplace section where you can sell or trade your cards.</p>
                         </div>
                         <a class="btn btn-centered mb-15" ref="https://unitedcardists.com/">Visit the forum &#8594;</a>
                     </article>
@@ -63,9 +64,8 @@
                 <article>
                     <div class="black-semitransparent-bg round-corners">
                         <h2 class="article-heading">Keep track of your collection with Portfolio52!</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, officiis ut quibusdam doloribus vel adipisci, autem error perferendis in atque voluptate, dolor ab eum beatae provident. Adipisci reprehenderit blanditiis amet sapiente maxime, et quidem. Numquam nisi labore quaerat dolorum voluptatum exercitationem illo. Expedita molestiae asperiores delectus vero nulla quae velit!
-                        </p>
+                        <p>This website is probably the best tool to keep track of your collection. Everyone from the community works on adding new decks that are not there yet and filling in the missing information about each already existing deck or its designer. The user interface is quite simple to get familiar with so you can start adding your decks in matter of minutes after creating an account and logging in.</p>
+                        <p>Many functionalities have been added since the first version of the website. Apart from the obvious - collection of decks creating your Collection - there is the Wishlist, where you can add decks you are currently looking for. Another collection of decks is called the Trade List. This serves only one purpouse - listing extra decks you have up for trade or sale. All of this makes is much simpler and nicer than trying to keep a spread sheet in Excel. Plus you can share your profile with others and see what you can trade.</p>
                     </div>
                     <a class="btn btn-centered" ref="https://portfolio52.com/">Create your portfolio &#8594;</a>
                 </article>
