--- a/designers/index.html
+++ b/designers/index.html
@@ -29,9 +29,8 @@
         <section>
             <article class="black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Many fish in the sea...</h2>
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim autem eaque repellat, nostrum impedit, natus rerum quibusdam doloribus voluptas ad ab inventore delectus tempora saepe. Sequi temporibus voluptatem veritatis quos eius! Nam, soluta dignissimos consequatur sapiente in, cumque, praesentium aliquid voluptas ex ipsum quia est quis? Eveniet accusamus et debitis, eaque labore illum, recusandae voluptatem unde nam dolor aut? Laborum quas natus fugiat tenetur voluptatibus?
-                </p>
+                <p>The world of playing card designs shows huge variety. That in itself is amazing because it allows everybody to find something they enjoy. You can find designs inspired by your hobby or featuring your favourite colors or patterns. Some decks are aimed more towards collectors while others for cardists or magicians to perform with. Searching for minimalistic design? Or very intricate luxurious decks? Or playing cards whose tuck case takes inspiration from origami to create unusual and very aesthetically pleasing opening? The possibilities are nearly endless!</p>
+                <p>Many designers may catch your attention and it is nearly impossible to list them all without boring you to sleep. I have picked five of my favourite designers or brands to showcase different approaches to creating a deck from the scratch. Pick one from the menu buttons under this paragraph to scroll to and learn more about.</p>
                 <div id="select-designer" class="designer-selection">
                     <a class="btn btn-nav" href="#luke-wadey">Luke Wadey</a>
                     <a class="btn btn-nav" href="#stockholm17">Stockholm17</a>
@@ -51,12 +50,18 @@
                     <div>
                         <h3>Basic info</h3>
                         <ul>
-                            <li>real name: </li>
-                            <li>based in: </li>
-                            <li>active since: </li>
+                            <li>real name: Luke Wadey</li>
+                            <li>based in: United Kingdom</li>
+                            <li>active since: 2019</li>
                         </ul>
                         <h3>Style</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
+                        <p>Over his active years, Luke Wadey created his own unique style that is instantly recognizable amongst the playing card community members. His series of decks called "Mono" focus on modern designs mainly for cardistry (but can be used for magic as well) using a single color. A series called "Grid." takes completely different approach taking advantage of Luke's professional career as a graphic designer. It is full of typography and very unique style separating his typographic decks from the rest.</p>
+                        <h3>Notable decks or series</h3>
+                        <ul>
+                            <li>Grid. Series</li>
+                            <li>Mono series</li>
+                            <li>ARW series</li>
+                        </ul>
                     </div>
                 </div>
                 <h3>Designs</h3>
@@ -90,12 +95,19 @@
                     <div>
                         <h3>Basic info</h3>
                         <ul>
-                            <li>real name: </li>
-                            <li>based in: </li>
-                            <li>active since: </li>
+                            <li>real name: Lorenzo Gaggiotti</li>
+                            <li>based in: Sweden</li>
+                            <li>active since: 2010</li>
                         </ul>
                         <h3>Style</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
+                        <p>Lorenzo Gaggitotti became a designer classic over the years thanks to his complex and intricate designs he was able to deliver over the decade of his designing journey. The vast majority of his decks are aimed at collectors due to use of foils during manufacturing and completely redrawn faces. Despite the complexity of each deck, Lorenzo is able to consistently produce many amazing decks.</p>
+                        <h3>Notable decks or series</h3>
+                        <ul>
+                            <li>Eye of the Ocean Playing Cards series</li>
+                            <li>The House of the Rising Spade Playing Cards (Deck of the Year award)</li>
+                            <li>The Odd Fellows Playing Cards series in collaboration with Portfolio52</li>
+                            <li>Ravn Playing Cards series for magician Caroline Ravn</li>
+                        </ul>
                     </div>
                 </div>
                 <h3>Designs</h3>
@@ -129,12 +141,18 @@
                     <div>
                         <h3>Basic info</h3>
                         <ul>
-                            <li>real name: </li>
-                            <li>based in: </li>
-                            <li>active since: </li>
+                            <li>real name: Nathan &#38; Leo</li>
+                            <li>based in: United States</li>
+                            <li>active since: 2019</li>
                         </ul>
                         <h3>Style</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
+                        <p>Faily new cardistry oriented brand that focuses on designs inspired by modern art branches. Many of their works are based on computer-generated artwork, which shows mainly throughout the "Databend" series. All designs feature a thick border around the center design that creates an unique vintage feel. Despite being on the market for just about three years, Missing New York already produced about a dozen of great decks. All decks are printed in just 1000 print runs.</p>
+                        <h3>Notable decks or series</h3>
+                        <ul>
+                            <li>Databend Playing Cards series</li>
+                            <li>Article Playing Cards</li>
+                            <li>Ink &#38; Pigment Playing Cards</li>
+                        </ul>
                     </div>
                 </div>
                 <h3>Designs</h3>
@@ -168,12 +186,18 @@
                     <div>
                         <h3>Basic info</h3>
                         <ul>
-                            <li>real name: </li>
-                            <li>based in: </li>
-                            <li>active since: </li>
+                            <li>real name: James Milaras</li>
+                            <li>based in: Australia</li>
+                            <li>active since: 2015</li>
                         </ul>
                         <h3>Style</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
+                        <p>The abbreviation J&#38;T appears in every design of this company's new decks. However, it is always hidden in the intricate design of the box and/or cards. Joker &#38; the Thief managed to penetrate both cardistry and collector worlds and continues to do so. Their most cardistry oriented deck is called simply "597". This minimalist approach is shown also in the design, which is complete opposite to anything they realeased before. You cannot step in the wrong direction with J&#38;T cards no matter what you are looking for.</p>
+                        <h3>Notable decks or series</h3>
+                        <ul>
+                            <li>Victory Playing Cards</li>
+                            <li>Seafarers Playing Cards series</li>
+                            <li>597 Playing Cards</li>
+                        </ul>
                     </div>
                 </div>
                 <h3>Designs</h3>
@@ -207,12 +231,18 @@
                     <div>
                         <h3>Basic info</h3>
                         <ul>
-                            <li>real name: </li>
-                            <li>based in: </li>
-                            <li>active since: </li>
+                            <li>real name: Daniel Schneider</li>
+                            <li>based in: Austria</li>
+                            <li>active since: 2014</li>
                         </ul>
                         <h3>Style</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
+                        <p>Daniel Schneider became known for his flexibility when it comes to his work. He can do classic designs inspired by the most printed deck ever - the Bicycle Rider Back - and put his own twist to it. That's where the Black Roses Playing Cards come in. The main design element is a rose and with some curls it creates amazing deck for any magician or casual user of playing cards. A minimalistic Hotel Casino deck series, which is one of the more recent endeavours of Daniel, is also based on the Black Roses rose logo design. The ability to create modern designs shows through in Orbit Playing Cards series. Each edition is different to the previous one. The main inspiration for all Orbit decks comes from space, however lately also featured a scene of San Diego's beach and view of its downtown on the second installment of Orbit Cardistry Con Edition.</p>
+                        <h3>Notable decks or series</h3>
+                        <ul>
+                            <li>Orbit Playing Cards series (released under brand Orbit)</li>
+                            <li>Black Roses Playing Cards series (released under brand Black Roses Playing Cards)</li>
+                            <li>Remedies Playing Cards series (collaboration with magician Daniel Madison)</li>
+                        </ul>
                     </div>
                 </div>
                 <h3>Designs</h3>
