oprava vzhledu stránky Manufacturers

--- a/manufacturers/index.html
+++ b/manufacturers/index.html
@@ -30,40 +30,44 @@
             <section class="intro-section">
                 <article class="black-semitransparent-bg round-corners">
                     <h2 class="article-heading">Who prints poker cards?</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non amet voluptatibus id modi eos sint error, aliquam numquam illo facere deserunt sed et nisi sunt assumenda asperiores quae ducimus animi neque earum odio. Odio aperiam, doloribus quos quo, natus repudiandae sint veniam, ea maiores autem doloremque magnam architecto non corporis!
-                    </p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque possimus, quo quisquam distinctio optio ullam saepe vero cum fugiat, qui doloribus dignissimos minus consequuntur. Eligendi excepturi facere nesciunt, harum, animi quidem impedit fugiat officiis hic obcaecati quam? Voluptatum, eos delectus, sapiente quisquam veritatis suscipit odit quam alias at molestiae illo!</p>
                 </article>
             </section>
             <section class="manufacturers-section">
                 <article class="black-semitransparent-bg round-corners">
                     <h2 class="article-heading">United States Playing Card Company</h2>
-                    <figure>
-                        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b2/TheUnitedStatesPlayingCardCompanyLogo.svg/1024px-TheUnitedStatesPlayingCardCompanyLogo.svg.png" alt="logo of United States Playing Card Company">
-                    </figure>
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex ducimus architecto sequi dolorum vitae voluptas, facere aut, adipisci, asperiores corrupti laborum mollitia eius exercitationem. Provident maxime tempore sequi eligendi soluta dolor hic porro quo ex laborum vitae reprehenderit animi omnis itaque minima, amet magni quod accusantium illo? Maxime, distinctio minus?
-                    </p>
+                    <div class="article-content">
+                        <figure>
+                            <img src="../assets/img/logo_uspcc.jpg" alt="logo of United States Playing Card Company">
+                        </figure>
+                        <div class="paragraphs">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sapiente cum alias neque distinctio. Necessitatibus nesciunt, odit quia, laboriosam nisi consectetur quis laborum libero explicabo, accusantium expedita minus ad error perspiciatis unde voluptatum ipsa nihil voluptates odio? Assumenda tenetur, voluptatibus, libero voluptate nostrum soluta commodi accusamus quae sit excepturi nisi.</p>
+                        </div>
+                    </div>
                     <a class="btn btn-centered" href="https://bicyclecards.com/">Visit &#8594;</a>
                 </article>
                 <article class="black-semitransparent-bg round-corners">
                     <h2 class="article-heading">Cartamundi</h2>
-                    <figure>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Cartamundi_logo_wslogan.png" alt="logo of Cartamundi">
-                    </figure>
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex ducimus architecto sequi dolorum vitae voluptas, facere aut, adipisci, asperiores corrupti laborum mollitia eius exercitationem. Provident maxime tempore sequi eligendi soluta dolor hic porro quo ex laborum vitae reprehenderit animi omnis itaque minima, amet magni quod accusantium illo? Maxime, distinctio minus?
-                    </p>
+                    <div class="article-content">
+                        <figure>
+                            <img src="../assets/img/logo_cartamundi.jpg" alt="logo of Cartamundi">
+                        </figure>
+                        <div class="paragraphs">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, adipisci quibusdam officiis reprehenderit necessitatibus quos corrupti voluptatem! Sit ad voluptate tempore vel! Unde tempore commodi qui veniam provident illo dolores cumque debitis ad? Fugit molestias eos, necessitatibus, nesciunt et laudantium saepe harum laboriosam laborum iure quas, labore aliquid illum animi.</p>
+                        </div>
+                    </div>
                     <a class="btn btn-centered" href="https://cartamundi.com/en/">Visit &#8594;</a>
                 </article>
                 <article class="black-semitransparent-bg round-corners">
                     <h2 class="article-heading">Make Playing Cards</h2>
-                    <figure>
-                        <img src="https://cdn.shopify.com/s/files/1/1788/4029/articles/MPC_logo_1024x1024.png?v=1571681131" alt="logo of Make Playing Cards">
-                    </figure>
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex ducimus architecto sequi dolorum vitae voluptas, facere aut, adipisci, asperiores corrupti laborum mollitia eius exercitationem. Provident maxime tempore sequi eligendi soluta dolor hic porro quo ex laborum vitae reprehenderit animi omnis itaque minima, amet magni quod accusantium illo? Maxime, distinctio minus?
-                    </p>
+                    <div class="article-content">
+                        <figure>
+                            <img src="../assets/img/logo_mpc.jpg" alt="logo of Make Playing Cards">
+                        </figure>
+                        <div class="paragraphs">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla repellendus quisquam temporibus blanditiis qui culpa minima dolor molestias veritatis! Architecto aspernatur quidem nostrum voluptatibus ipsa, deserunt mollitia illum dignissimos ullam tempore odio voluptates quo dolor tempora ratione cum. Quidem vero dolor aliquid dignissimos id voluptas explicabo repellat at sapiente consectetur.</p>
+                        </div>
+                    </div>
                     <a class="btn btn-centered" href="https://www.makeplayingcards.com/">Visit &#8594;</a>
                 </article>
             </section>
