--- a/manufacturers/index.html
+++ b/manufacturers/index.html
@@ -30,7 +30,7 @@
             <section class="intro-section">
                 <article class="black-semitransparent-bg round-corners">
                     <h2 class="article-heading">Who prints poker cards?</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque possimus, quo quisquam distinctio optio ullam saepe vero cum fugiat, qui doloribus dignissimos minus consequuntur. Eligendi excepturi facere nesciunt, harum, animi quidem impedit fugiat officiis hic obcaecati quam? Voluptatum, eos delectus, sapiente quisquam veritatis suscipit odit quam alias at molestiae illo!</p>
+                    <p>When you take into consideration that about 100 million decks of poker cards are printed each year by a single US company (eventhough it is the largest one), there must be a great demand for them. Millions of decks are printed just for casinos alone, then you have retailers selling cards in brick and mortar stores for card games and there is also a considerable growing market for custom playing cards. I have chosen three of the most known and used companies, which are in the business of printing poker cards. Read on to get to know a little bit about them.</p>
                 </article>
             </section>
             <section class="manufacturers-section">
@@ -41,7 +41,9 @@
                             <img src="../assets/img/logo_uspcc.jpg" alt="logo of United States Playing Card Company">
                         </figure>
                         <div class="paragraphs">
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sapiente cum alias neque distinctio. Necessitatibus nesciunt, odit quia, laboriosam nisi consectetur quis laborum libero explicabo, accusantium expedita minus ad error perspiciatis unde voluptatum ipsa nihil voluptates odio? Assumenda tenetur, voluptatibus, libero voluptate nostrum soluta commodi accusamus quae sit excepturi nisi.</p>
+                            <p>The United States Playing Card Company is considered one of the best, if not the best, in regards of quality and feel of the paper used for poker cards. They are also suppliers of casino decks across United States and in many other countries. The estimate of 100 million decks a year they produce, which was mentioned in the introduction paragraph, is from one fifth consumed by casinos. In the playing card community, USPCC is considered the "gold standard" for quality cards.</p>
+                            <p>They are, however, notorious for problems with alignment while cutting cards from uncut sheets and you sometimes end up with crooked borders on the deck. This fact is especially noticeable when design features a really thin border. It is sort of a running joke in the community. Despite the occasional hickup, USPCC is the most popular manufacturer of playing cards there is.</p>
+                            <p>The United States Playing Card Company was recently acquired by Cartamundi, which brings us to the following manufacturer...</p>
                         </div>
                     </div>
                     <a class="btn btn-centered" href="https://bicyclecards.com/">Visit &#8594;</a>
@@ -53,7 +55,10 @@
                             <img src="../assets/img/logo_cartamundi.jpg" alt="logo of Cartamundi">
                         </figure>
                         <div class="paragraphs">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, adipisci quibusdam officiis reprehenderit necessitatibus quos corrupti voluptatem! Sit ad voluptate tempore vel! Unde tempore commodi qui veniam provident illo dolores cumque debitis ad? Fugit molestias eos, necessitatibus, nesciunt et laudantium saepe harum laboriosam laborum iure quas, labore aliquid illum animi.</p>
+                            <p>Cartamundi started as a printer for card games and board game card accessories and they became a huge international company. Then they decided to join the poker playing cards market with their own deck called "Copag 310" trying to compete with Bicycle Rider Back deck. They became known for their True Linen finish, which seems like a small lines imprinted in paper. On the contrary, the USPCC uses Air Cushion finish, which is like a network of tiny squares.</p>
+                            <p>The first decks were printed on great paper stock called B9, however, the decks were a lot thicker, by about 10 cards than Retail stock of USPCC. Nevertheless, Cartamundi was able to catch up on this small bump on their road to customers and continues to produce great quality decks.</p>
+                            <p>As mentioned before, Cartamundi acquired USPCC in 2020. Even though it may sound like they got rid of a great competition, they let USPCC run the way it was up to the acquisition, which still kept the variety of stocks and finishes on the market.</p>
+                            <p>Cartamundi is also a large scale printer just like USPCC with minimum order of 1000 decks. Cartamundi can also print just 200 prototype decks, which comes at very high cost per deck. If you want to prototype a deck and want just one, you don't have to worry, the following manufacturer has you covered!</p>
                         </div>
                     </div>
                     <a class="btn btn-centered" href="https://cartamundi.com/en/">Visit &#8594;</a>
@@ -65,7 +70,9 @@
                             <img src="../assets/img/logo_mpc.jpg" alt="logo of Make Playing Cards">
                         </figure>
                         <div class="paragraphs">
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla repellendus quisquam temporibus blanditiis qui culpa minima dolor molestias veritatis! Architecto aspernatur quidem nostrum voluptatibus ipsa, deserunt mollitia illum dignissimos ullam tempore odio voluptates quo dolor tempora ratione cum. Quidem vero dolor aliquid dignissimos id voluptas explicabo repellat at sapiente consectetur.</p>
+                            <p>Make Playing Cards company became known thanks to the opportunity to print just a single deck of whatever design you please. This allows designers to print prototypes according to the exact demand they face. These decks usually end up in hands of photographers to create product photos for Kickstarter campaigns or preorders. The other usual usecase is for limited editions of certain decks, like Kickstarter exclusives, since you don't have to sell all 200 or 1000 decks like with Cartamundi or USPCC.</p>
+                            <p>Cards from the MPC do not match the quality of Cartamundi or USPCC, however, they got up to speed fast and may catch up during the following years. Jumps in the quality are indisputable.</p>
+                            <p>MPC also prints their own decks, they made an entrance by printing special edition decks for Cardistry Con in 2018 and also 2019. The step up in quality with their BETA finish was amazing surprise to all playing cards enthusiasts.</p>
                         </div>
                     </div>
                     <a class="btn btn-centered" href="https://www.makeplayingcards.com/">Visit &#8594;</a>
