obsah stránky About

--- a/about/index.html
+++ b/about/index.html
@@ -34,12 +34,8 @@
                         <img class="round-corners" src="https://scontent-prg1-1.xx.fbcdn.net/v/t1.6435-9/53226290_2364037243621051_262017615218606080_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=grWz1WT5j94AX9jGu9W&_nc_ht=scontent-prg1-1.xx&oh=00_AfD8_KD2f2vj1OtcLYsYj00Ae1PBLuj_eTZDt0awCRSKHQ&oe=639AD997" alt="profile picture of the author (Dominik Fuka)">
                     </figure>
                     <div class="text-content">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae deserunt maiores dolorem delectus voluptates veritatis voluptas blanditiis et quidem, autem corporis odit molestiae minus quibusdam cum dignissimos praesentium id aut!
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, quod odit, unde quaerat cumque minima maxime, ullam asperiores vero commodi fuga nihil praesentium voluptatem? Magni, fuga? Ducimus debitis magni ullam!
-                        </p>
+                        <p>I am Dominik, playing card enthusiast and collector. I can do a few cardistry flourishes, however, I don't perform any magic because I like to be fascinated by it from the laymen spectator point of view. I enjoy taking photos of playing cards the most. It is fun trying to figure out where a certain design fits the best and to which props.</p>
+                        <p>Given the information in the first paragraph, I think it makes sense to create a semestral project about playing cards. Having some fun while learning HTML and CSS is the best way for something to stick in my memory.</p>
                     </div>
                 </div>
             </article>
