verze pro tisk všech stránek

--- a/about/index.html
+++ b/about/index.html
@@ -8,6 +8,7 @@
     <title>SP1 About</title>
     <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/styles.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/about.css">
+    <link rel="stylesheet" type="text/css" media="print" href="../assets/css/print.css">
     <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png">
 </head>
 
@@ -34,7 +35,7 @@
             <h2 class="article-heading">About me and why I created this page</h2>
             <div class="article-content">
                 <figure>
-                    <img class="round-corners"
+                    <img class="round-corners no-logo-on-print"
                         src="https://scontent-prg1-1.xx.fbcdn.net/v/t1.6435-9/53226290_2364037243621051_262017615218606080_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=grWz1WT5j94AX9jGu9W&_nc_ht=scontent-prg1-1.xx&oh=00_AfD8_KD2f2vj1OtcLYsYj00Ae1PBLuj_eTZDt0awCRSKHQ&oe=639AD997"
                         alt="profile picture of the author (Dominik Fuka)">
                 </figure>
