--- a/collecting/index.html
+++ b/collecting/index.html
@@ -8,6 +8,7 @@
     <title>SP1 Collecting</title>
     <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/styles.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/collecting.css">
+    <link rel="stylesheet" type="text/css" media="print" href="../assets/css/print.css">
     <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png">
 </head>
 
@@ -47,7 +48,7 @@
                 <article class="black-semitransparent-bg round-corners">
                     <div class="article-content">
                         <h2 class="article-heading">Instagram community</h2>
-                        <div class="logo-crop">
+                        <div class="logo-crop no-logo-on-print">
                             <img class="logo" src="../assets/img/ig_logo.png" alt="Instagram logo">
                         </div>
                         <p>Instagram became a harbour of playing card content over the years. You can find basically all
@@ -71,7 +72,7 @@
                 <article class="black-semitransparent-bg round-corners">
                     <div class="article-content">
                         <h2 class="article-heading">United Cardists forum</h2>
-                        <div class="logo-crop">
+                        <div class="logo-crop no-logo-on-print">
                             <img class="logo"
                                 src="https://scontent-prg1-1.xx.fbcdn.net/v/t1.18169-9/10441243_1524966054390342_8710750428767427879_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=86_Q4_PYgSEAX8YQ6yN&_nc_ht=scontent-prg1-1.xx&oh=00_AfBNeCbwQo7hiUnkWJ-HzV3kDV-efbfRErjlDS6vk3DgvA&oe=638DA91C"
                                 alt="United Cardists Forum logo">
