--- a/manufacturers/index.html
+++ b/manufacturers/index.html
@@ -8,6 +8,7 @@
     <title>SP1 Manufacturers</title>
     <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/styles.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/manufacturers.css">
+    <link rel="stylesheet" type="text/css" media="print" href="../assets/css/print.css">
     <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png">
 </head>
 
@@ -45,7 +46,7 @@
             <article class="black-semitransparent-bg round-corners">
                 <h2 class="article-heading">United States Playing Card Company</h2>
                 <div class="article-content">
-                    <figure>
+                    <figure class="no-logo-on-print">
                         <img src="../assets/img/logo_uspcc.jpg" alt="logo of United States Playing Card Company">
                     </figure>
                     <div class="paragraphs">
@@ -69,7 +70,7 @@
             <article class="black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Cartamundi</h2>
                 <div class="article-content">
-                    <figure>
+                    <figure class="no-logo-on-print">
                         <img src="../assets/img/logo_cartamundi.jpg" alt="logo of Cartamundi">
                     </figure>
                     <div class="paragraphs">
@@ -97,7 +98,7 @@
             <article class="black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Make Playing Cards</h2>
                 <div class="article-content">
-                    <figure>
+                    <figure class="no-logo-on-print">
                         <img src="../assets/img/logo_mpc.jpg" alt="logo of Make Playing Cards">
                     </figure>
                     <div class="paragraphs">
