--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>SP1 Homepage</title>
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/styles.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/homepage.css">
+    <link rel="stylesheet" type="text/css" media="print" href="./assets/css/print.css">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
 </head>
 
