--- a/uses/index.html
+++ b/uses/index.html
@@ -8,6 +8,7 @@
     <title>SP1 Uses</title>
     <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/styles.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/uses.css">
+    <link rel="stylesheet" type="text/css" media="print" href="../assets/css/print.css">
     <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png">
 </head>
 
