--- a/uses/index.html
+++ b/uses/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SP1 Uses</title>
+    <meta name="description" content="Page about poker cards, their designers, manufacturers, and how to make use of them.">
+    <meta name="keywords" content="poker cards, uspcc, cartamundi, cardistry, magic, poker">
+    <meta name="author" content="Dominik Fuka">
+    <title>Poker cards - Uses</title>
     <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/styles.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/uses.css">
     <link rel="stylesheet" type="text/css" media="print" href="../assets/css/print.css">
