oprava chybějícího středníku u entity ve footeru

--- a/about/index.html
+++ b/about/index.html
@@ -55,7 +55,7 @@
         </article>
     </section>
     <footer>
-        <a class="btn btn-back-to-top" href="#">Back to top &#8593</a>
+        <a class="btn btn-back-to-top" href="#">Back to top &#8593;</a>
         <p>Copyright &#169; 2022 Dominik Fuka</p>
     </footer>
 </body>
