--- a/uses/index.html
+++ b/uses/index.html
@@ -118,7 +118,7 @@
         </article>
     </main>
     <footer>
-        <a class="btn btn-back-to-top" href="#">Back to top &#8593</a>
+        <a class="btn btn-back-to-top" href="#">Back to top &#8593;</a>
         <p>Copyright &#169; 2022 Dominik Fuka</p>
     </footer>
 </body>
