--- a/designers/index.html
+++ b/designers/index.html
@@ -50,7 +50,7 @@
                 <a class="btn btn-nav" href="#luke-wadey">Luke Wadey</a>
                 <a class="btn btn-nav" href="#stockholm17">Stockholm17</a>
                 <a class="btn btn-nav" href="#missing-new-york">Missing New York</a>
-                <a class="btn btn-nav" href="#joker-and-the-thief">Joker &#38 the Thief</a>
+                <a class="btn btn-nav" href="#joker-and-the-thief">Joker &#38; the Thief</a>
                 <a class="btn btn-nav" href="#daniel-schneider">Daniel Schneider</a>
             </div>
         </article>
