--- a/uses/index.html
+++ b/uses/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="video-wrapper">
                     <iframe class="round-corners" src="https://www.youtube-nocookie.com/embed/CpSewSHZhmo"
-                        title="YouTube video player" frameborder="0"
+                        title="YouTube video player"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="video-wrapper">
                     <iframe class="round-corners" src="https://www.youtube-nocookie.com/embed/S7kG641iA_g"
-                        title="YouTube video player" frameborder="0"
+                        title="YouTube video player"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="video-wrapper">
                     <iframe class="round-corners" src="https://www.youtube-nocookie.com/embed/pYw4ibT_xrk"
-                        title="YouTube video player" frameborder="0"
+                        title="YouTube video player"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
